Small changes to imports and such