@@ -18,18 +18,17 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.security.GeneralSecurityException;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class YoutubeAuth {
-    private static final String CLIENT_SECRETS= "client_secrets.json";
     private static final Collection<String> SCOPES =
-            Arrays.asList("https://www.googleapis.com/auth/youtube.readonly");
+            List.of("https://www.googleapis.com/auth/youtube.readonly");
     private static final String TOKENS_DIRECTORY_PATH = "src/main/resources/tokens";
     private static final String APPLICATION_NAME = "Your Application Name";
     private static final JsonFactory JSON_FACTORY = JacksonFactory.getDefaultInstance();
 
-    public static Credential authorize(final NetHttpTransport httpTransport) throws IOException {
+    public Credential authorize(final NetHttpTransport httpTransport) throws IOException {
         // Load client secrets.
         InputStream in = YoutubeAuth.class.getResourceAsStream("/client_secrets.json");
         if (in == null) {
@@ -49,13 +48,11 @@ public class YoutubeAuth {
                         .setAccessType("offline")
                         .build();
 
-        Credential credential =
-                new AuthorizationCodeInstalledApp(flow, new LocalServerReceiver.Builder().setPort(8080).build())
-                        .authorize("user");
-        return credential;
+        return new AuthorizationCodeInstalledApp(flow, new LocalServerReceiver.Builder().setPort(8080).build())
+                .authorize("user");
     }
 
-    public static YouTube getYouTubeService() throws GeneralSecurityException, IOException {
+    public YouTube getYouTubeService() throws GeneralSecurityException, IOException {
         final NetHttpTransport httpTransport = GoogleNetHttpTransport.newTrustedTransport();
         Credential credential = authorize(httpTransport);
         return new YouTube.Builder(httpTransport, JSON_FACTORY, credential)
@@ -63,7 +60,7 @@ public class YoutubeAuth {
                 .build();
     }
 
-    public static YouTubeAnalytics getService() throws GeneralSecurityException, IOException {
+    public YouTubeAnalytics getService() throws GeneralSecurityException, IOException {
         final NetHttpTransport httpTransport = GoogleNetHttpTransport.newTrustedTransport();
         Credential credential = authorize(httpTransport);
         return new YouTubeAnalytics.Builder(httpTransport, JSON_FACTORY, credential)
